--- a/Frontend/css/style.css
+++ b/Frontend/css/style.css
@@ -7,7 +7,6 @@
 }
 
 
-
 /*** Spinner ***/
 .spinner {
     width: 40px;
@@ -474,7 +473,7 @@ h6,
 }
 
 .bg-header {
-    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(9, 30, 62, .7), rgba(9, 30, 62, .7)), url(../img/carousel-3.png) center center no-repeat;
     background-size: cover;
 }
 
